Recompile main index

--- a/index.html
+++ b/index.html
@@ -695,11 +695,18 @@ function consolidate_spaces(s)
 /* Triangle area computed by Heron's formula */
 function tri_area(p1, p2, p3)
 {
+/*
   let a = Math.sqrt(Math.pow(p2.x - p1.x, 2) + Math.pow(p2.y - p1.y, 2));
   let b = Math.sqrt(Math.pow(p3.x - p2.x, 2) + Math.pow(p3.y - p2.y, 2));
   let c = Math.sqrt(Math.pow(p1.x - p3.x, 2) + Math.pow(p1.y - p3.y, 2));
   let s = (a + b + c) / 2;
   return Math.sqrt(s * (s  - a) * (s - b) * (s - c));
+*/
+/* Magic from https://byjus.com/maths/collinear-points */
+  let a = p1.x * (p2.y - p3.y);
+  let b = p2.x * (p3.y - p1.y);
+  let c = p3.x * (p1.y - p2.y);
+  return 0.5 * Math.abs(a + b + c);
 }
 
 /* Line segment is 2x 2d points { p1: {x,y}, p2: {x,y}}
@@ -1003,6 +1010,7 @@ function poly_approx_Q(polyline, p0, p1, p2, is_outer)
     default:
       console.log({p0, p1, p2, testPt, delta});
       console.log(res);
+      console.log("Error approx Q -- 1");
       alert("Error approx Q -- 1");
       return;
   }
@@ -1021,6 +1029,7 @@ function poly_approx_Q(polyline, p0, p1, p2, is_outer)
     default:
       console.log({p0, p1, p2, testPt, delta});
       console.log(res);
+      console.log("Error approx Q -- 2");
       alert("Error approx Q -- 2");
       return;
   }
@@ -1131,7 +1140,7 @@ function polylines_from_svg(svg_s)
   }
   let d = consolidate_spaces(path.attributes.d.nodeValue.replace(/M/g, " M ").replace(/L/g, " L ").replace(/Q/g, " Q ").trim()).split(" ");
   if (d[0] != "M") {
-    alert("Unsupported SVG format: expecting M first");
+    console.log("Unsupported SVG format: expecting M first");
     return null;
   }
   let polylines = [];
@@ -1410,8 +1419,24 @@ alert("Unfinished format 2 subHeaders / glyhphIndexArray");
                   glyphIdArray });
         break;
       }
+      case 12: {
+        let reserved  = READINT(2, rsum, meta);
+        let length    = READINT(4, rsum, meta);
+        let language  = READINT(4, rsum, meta);
+        let numGroups = READINT(4, rsum, meta);
+        let groups    = [];
+        for (let j=0; j<numGroups; j++) {
+          let startCharCode = READINT(4, rsum, meta);
+          let endCharCode   = READINT(4, rsum, meta);
+          let startGlyphID  = READINT(4, rsum, meta);
+          groups[j] = { startCharCode, endCharCode, startGlyphID };
+	}
+        subtables[i] = Object.assign(subtables[i],
+                { reserved, length, language, numGroups, groups });
+        break;
+      }
       default:
-        alert("Unhandled format " + format);
+        alert("(Parse) Unhandled format " + format);
         return false;
     }
   }
@@ -1819,7 +1844,7 @@ function lookup_cmap_glyph_sub(cmap, char_code)
       }
       return null;
     default:
-      alert("Unhandled format: " + cmap.format);
+      alert("(Lookup) Unhandled format: " + cmap.format);
       break;
 
   }
@@ -2563,6 +2588,9 @@ function convert_to_svg_glyph_sub(glyph_jsons, idx, ABCDEF)
 {
   let svg = "";
   let glyph_json = glyph_jsons[idx];
+  if (glyph_json == null) {
+    return null;
+  }
   if (!Array.isArray(glyph_json)) {
     /* composite glyph */
     let subglyfs = glyph_json.subglyfs;
