--- a/index.html
+++ b/index.html
@@ -1940,7 +1940,7 @@ function glfontsdev_compile(tess_array)
   let off2 = 0;
   for (let i=0; i<glf_array.length; i++) {
     if (glf_array[i] == null) {
-      lookup[i] = null;
+      lookup[i] = { start: -1, len: 0 };
       continue;
     }
     for (let j=0; j<glf_array[i].idx.length; j++) {
@@ -2504,6 +2504,7 @@ var gl;
 var vbo_m;
 var prog;
 var prag;
+var font;
 
 function set_status(id, stat)
 {
@@ -2528,12 +2529,12 @@ function downloadURI(uri, name)
 
 function download1()
 {
+  /* OPENSAYSME: ttf_json = JSON.stringify(glf, null, 2); */
   const str = ttf_json.toString();
   const bytes = new TextEncoder().encode(str);
   const blob = new Blob([bytes], { type: "application/json;charset=utf-8" });
   let url = URL.createObjectURL(blob);
   let dl_filename = filename + ".json.txt";
-
   downloadURI(url, dl_filename);
 }
 
@@ -2733,7 +2734,7 @@ function create_prag(vbo, caM_data)
 
 function draw(arg)
 {
-  let idx = lookup_cmap_glyph(cmap, arg.charCode);
+  let idx = arg.glf.cmap_lookup[arg.charCode];
   let tab = arg.glf.lookup[idx];
   arg.vao.bind(arg.gl.ELEMENT_ARRAY_BUFFER);
   const ext = gl.getExtension("OES_element_index_uint");
@@ -2744,7 +2745,7 @@ function draw(arg)
 
 function draw2(arg)
 {
-  let idx = lookup_cmap_glyph(cmap, arg.charCode);
+  let idx = arg.glf.cmap_lookup[arg.charCode];
   let tab = arg.glf.lookup[idx];
   const ext = gl.getExtension("OES_element_index_uint");
   let start = tab.start;
@@ -2854,7 +2855,7 @@ function tesselate_svg()
     tess[i] = polygons_tessellate(polygons);
   }
   glf = glfontsdev_compile(tess);
-  console.log({glf});
+  glf.cmap_lookup = build_glyph_index(cmap);
   draw_canvas();
 }
 
