Switch from alert to console.error

--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@ function poly_approx(polyline, approx_fn)
         approx = approx.concat([polyline[i].pt.x, polyline[i].pt.y])
         break;
       default:
-        alert("Unhandled path op: " + polyline[i]);
+        console.error("Unhandled path op: " + polyline[i]);
         break;
     }
   }
@@ -1011,7 +1011,7 @@ function poly_approx_Q(polyline, p0, p1, p2, is_outer)
       console.log({p0, p1, p2, testPt, delta});
       console.log(res);
       console.log("Error approx Q -- 1");
-      alert("Error approx Q -- 1");
+      console.error("Error approx Q -- 1");
       return;
   }
 
@@ -1030,7 +1030,7 @@ function poly_approx_Q(polyline, p0, p1, p2, is_outer)
       console.log({p0, p1, p2, testPt, delta});
       console.log(res);
       console.log("Error approx Q -- 2");
-      alert("Error approx Q -- 2");
+      console.error("Error approx Q -- 2");
       return;
   }
 
@@ -1084,7 +1084,7 @@ function polyline_prepare_tess(polyline, is_outer)
          bezfills = bezfills.concat(res.bezfill);
          break;
       default:
-        alert("Unhandled op: " + polygon.outer[i].op);
+        console.error("Unhandled op: " + polygon.outer[i].op);
     }
   }
   return { pts, bezfills };
@@ -1126,7 +1126,7 @@ function polylines_from_svg(svg_s)
         path_idx = i;
         continue;
       }
-      alert("Unsupported SVG format: Only 1 path element supported.");
+      console.error("Unsupported SVG format: Only 1 path element supported.");
       return null;
     }
   }
@@ -1135,7 +1135,7 @@ function polylines_from_svg(svg_s)
     return null;
   }
   if (path.attributes.d == undefined) {
-    alert("Unsupported SVG format: expecting d attribute.");
+    console.error("Unsupported SVG format: expecting d attribute.");
     return null;
   }
   let d = consolidate_spaces(path.attributes.d.nodeValue.replace(/M/g, " M ").replace(/L/g, " L ").replace(/Q/g, " Q ").trim()).split(" ");
@@ -1166,7 +1166,7 @@ function polylines_from_svg(svg_s)
     if (d[i] == "Z") {
       break;
     }
-    alert("Unsupported SVG format: Unhandled op: " + d[i]);
+    console.error("Unsupported SVG format: Unhandled op: " + d[i]);
     return null;
   }
   return polylines;
@@ -1260,7 +1260,7 @@ function parseTables(meta)
       continue;
 
     if (calculated != checksum) {
-      alert("Bad checksum for " + tag + " " + calculated + " != " + checksum);
+      console.error("Bad checksum for " + tag + " " + calculated + " != " + checksum);
       return false;
     }
   }
@@ -1295,7 +1295,7 @@ function parseHeadTable(meta)
   console.log("xMin: " + xMin + ", yMin: " + yMin);
 
   if (magicNumber != 0x5F0F3CF5) {
-    alert("Bad magicNumber " + magicNumber + " != " + 0x5F0F3CF5);
+    console.error("Bad magicNumber " + magicNumber + " != " + 0x5F0F3CF5);
     return false;
   }
 
@@ -1305,12 +1305,12 @@ function parseHeadTable(meta)
 
   meta.tables['head'].adjustedChecksum = (meta.tables['head'].checksum + checksumAdjustment) % 4294967296;
   if (meta.tables['head'].adjustedChecksum != meta.tables['head'].calculated) {
-    alert("Bad checksum for head " + meta.tables['head'].adjustedChecksum + " != " + meta.tables['head'].calculated);
+    console.error("Bad checksum for head " + meta.tables['head'].adjustedChecksum + " != " + meta.tables['head'].calculated);
     return false;
   }
 
   if (indexToLocFormat != 0 && indexToLocFormat != 1) {
-    alert("Invalid indexToLocFormat (must be 0 or 1) " + indexToLocFormat);
+    console.error("Invalid indexToLocFormat (must be 0 or 1) " + indexToLocFormat);
     return false;
   }
 
@@ -1363,7 +1363,7 @@ function parseCmapTable(meta)
           let k             = subHeaderKeys[j] / 8;
           k_max             = Math.max(k_max, k);
         }
-alert("Unfinished format 2 subHeaders / glyhphIndexArray");
+console.error("Unfinished format 2 subHeaders / glyhphIndexArray");
         return false;
         break;
       }
@@ -1381,7 +1381,7 @@ alert("Unfinished format 2 subHeaders / glyhphIndexArray");
         }
         let reservedPad     = READINT(2, rsum, meta);
         if (reservedPad != 0) {
-          alert("reservedPad not zero (" + reservedPad + ")");
+          console.error("reservedPad not zero (" + reservedPad + ")");
           return false;
         }
         let startCode       = [];
@@ -1436,7 +1436,7 @@ alert("Unfinished format 2 subHeaders / glyhphIndexArray");
         break;
       }
       default:
-        alert("(Parse) Unhandled format " + format);
+        console.error("(Parse) Unhandled format " + format);
         return false;
     }
   }
@@ -1460,7 +1460,7 @@ function parseMaxpTable(meta)
   }
 
   if (format != 0x10000) {
-    alert("Unhandled maxp format: " + format);
+    console.error("Unhandled maxp format: " + format);
     return false;
   }
 
@@ -1495,7 +1495,7 @@ function parseLocaTable(meta)
   let offsets = [];
   if (meta.indexToLocFormat == 0) {
     if (meta.tables['loca'].length != 2 * (meta.numGlyphs + 1)) {
-      alert("Invalid size for loca table " + meta.tables['loca'].length + " != " + (2 * (meta.numGlyphs + 1)));
+      console.error("Invalid size for loca table " + meta.tables['loca'].length + " != " + (2 * (meta.numGlyphs + 1)));
       return false;
     }
     for (let i=0; i<meta.numGlyphs + 1; i++) {
@@ -1504,7 +1504,7 @@ function parseLocaTable(meta)
   }
   if (meta.indexToLocFormat == 1) {
     if (meta.tables['loca'].length != 4 * (meta.numGlyphs + 1)) {
-      alert("Invalid size for loca table " + meta.tables['loca'].length + " != " + (4 * (meta.numGlyphs + 1)));
+      console.error("Invalid size for loca table " + meta.tables['loca'].length + " != " + (4 * (meta.numGlyphs + 1)));
       return false;
     }
     for (let i=0; i<meta.numGlyphs + 1; i++) {
@@ -1702,7 +1702,7 @@ function parseGlyf(i, glyf, meta)
 {
   let offset = meta.ttf.tables.loca.offsets[i];
   if (offset < 0 || offset > meta.tables['glyf'].length) {
-    alert("out of bounds loca[" + i + "] offset: " + offset + "(glyf.length: " + meta.tables['glyf'].length + ")");
+    console.error("out of bounds loca[" + i + "] offset: " + offset + "(glyf.length: " + meta.tables['glyf'].length + ")");
     return false;
   }
   if (offset == meta.ttf.tables.loca.offsets[i+1]) {
@@ -1807,15 +1807,15 @@ function lookup_cmap_glyph_sub(cmap, char_code)
       let i;
       let length = cmap.startCode.length;
       if (length != cmap.endCode.length) {
-        alert("cmap length mismatch startCode != endCode");
+        console.error("cmap length mismatch startCode != endCode");
         return null;
       }
       if (length != cmap.idRangeOffset.length) {
-        alert("cmap length mismatch startCode != idRangeOffset");
+        console.error("cmap length mismatch startCode != idRangeOffset");
         return null;
       }
       if (length != cmap.idDelta.length) {
-        alert("cmap length mismatch startCode != idDelta");
+        console.error("cmap length mismatch startCode != idDelta");
         return null;
       }
       for (i=0; i<length; i++) {
@@ -1844,7 +1844,7 @@ function lookup_cmap_glyph_sub(cmap, char_code)
       }
       return null;
     default:
-      alert("(Lookup) Unhandled format: " + cmap.format);
+      console.error("(Lookup) Unhandled format: " + cmap.format);
       break;
 
   }
@@ -2598,7 +2598,7 @@ function convert_to_svg_glyph_sub(glyph_jsons, idx, ABCDEF)
     for (let i=0; i<subglyfs.length; i++) {
       subglyf = subglyfs[i];
       if (!subglyf.ARGS_ARE_XY_VALUES) {
-        alert("!ARGS_ARE_XY_VALUES Unsupported");
+        console.error("!ARGS_ARE_XY_VALUES Unsupported");
       }
 /* a b e     A B E    (Aa + Cb) (Ba + Db) (Ea + Fb + e)
  * c d f  x  C D F  = (Ac + Cd) (Bc + Dd) (Ec + Fd + f)
@@ -2902,7 +2902,7 @@ function readFile(input)
   }
 
   fileReader.onerror = function() {
-    alert(fileReader.error);
+    console.error(fileReader.error);
   }
 
 }
