--- a/src/index.html
+++ b/src/index.html
@@ -177,6 +177,7 @@ function convert_to_svg()
     let svg_el = document.createElement("img");
     svgs[i] = svg;
     svg_el.src = "data:image/svg+xml;base64," + btoa(svg);
+    table_td_el.id = "glyph" + i;
     table_td_el.appendChild(svg_el);
     table_tr_el.appendChild(table_td_el);
   }
@@ -255,6 +256,17 @@ function create_prag(vbo, caM_data)
       texCoord: vbo
     }
   });
+}
+
+function reverse_cmap(cmap_lookup)
+{
+  let ks = Object.keys(cmap_lookup);
+  let rev = { };
+  for (let i=0; i<ks.length; i++) {
+    let k = ks[i];
+    rev[cmap_lookup[k]] = k;
+  }
+  return rev;
 }
 
 function draw(arg)
@@ -381,6 +393,19 @@ function tesselate_svg()
   }
   glf = glfontsdev_compile(tess);
   glf.cmap_lookup = build_glyph_index(cmap);
+  let rev_cmap = reverse_cmap(glf.cmap_lookup);
+  for (let i=0; i<svgs.length; i++) {
+    let id = "glyph" + i;
+    let el = document.getElementById(id);
+    let te = document.createElement("p");
+    let c = rev_cmap[i];
+    if (c != undefined) {
+      te.innerText = "U+" + Number(rev_cmap[i]).toString(16).padStart(4, '0');
+    } else {
+      te.innerText = "";
+    }
+    el.prepend(te);
+  }
   draw_canvas();
 }
 
